--- a/lisa-delay-queue-consumer-demo/pom.xml
+++ b/lisa-delay-queue-consumer-demo/pom.xml
@@ -25,7 +25,7 @@
         <dependency>
             <groupId>org.lisa.stream</groupId>
             <artifactId>lisa-delay-queue-consumer-spring-boot-starter</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>1.0.0</version>
         </dependency>
     </dependencies>
 
