--- a/lisa-delay-queue-producer-demo/pom.xml
+++ b/lisa-delay-queue-producer-demo/pom.xml
@@ -11,7 +11,7 @@
     </parent>
 
     <artifactId>lisa-delay-queue-producer-demo</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0.0</version>
 
     <name>lisa-delay-queue-producer-demo</name>
 
@@ -25,7 +25,7 @@
         <dependency>
             <groupId>org.lisa.stream</groupId>
             <artifactId>lisa-delay-queue-producer-spring-boot-starter</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>1.0.0</version>
         </dependency>
     </dependencies>
 
